Fixed z-index

--- a/src/components/Sections/Section08/styles.scss
+++ b/src/components/Sections/Section08/styles.scss
@@ -5,7 +5,7 @@ $min-height: 840px;
 .section {
   &.--s08 {
     position: relative;
-    z-index: 40;
+    z-index: 100;
     min-height: $min-height;
     height: $min-height;
     display: flex;
